* #720: in case there is an error in doStoreFromDefaultForm, the correct message is shown to the user (Phoenyx)
* #301: removed creation of /uploads/profile/mp3 in imProfile | ticket from addons (Phoenyx)
* #300: a visit to a profile of another user is now loged | ticket from addons (Phoenyx)
* #303: links in the imProfile submenu are working properly now | ticket from addons (Phoenyx)
* #304: you are now redirected to your profile page in case a user isn't found | ticket from addons (Phoenyx)
* #260: fixed redirect loop for non-admin users in imProfile | ticket from addons (Phoenyx)
* #722: description for image upload content area is now fully readable (IPF) (Phoenyx)
* #293: About page in imProfile is working properly now | ticket from addons (Phoenyx)
* #284: pictures, tribe pictures and audio files are now deleted together with the record | ticket from addons (Phoenyx)

===2009-06-20 : 1.2 Alpha 2.1 ===
'''Fixed'''
* #619: Parse error in /trust_path/modules/oninstall.php. (UnderDog)
* #626: trying to edit the "waiting contents" block results in: Fatal error: Call to undefined function b_system_waiting_edit(). (UnderDog)

===2009-06-05 : 1.2 Alpha 2 === 

'''Added'''
* #580: Adding protector as a part of core modules. (stranger)
* #253: The admin area should have an option to define what mime types the site on a whole or specific modules can use. (stranger)
* #598 New block to display user's bookmarks (skenow)
* Implementing Adsense manager into system admin. (stranger)
* Implementing Rating manager into system admin. (stranger)
* #580: Added protector module to installer with automatic replacement of it to modules path. (stranger)

'''Improved'''
* The module installer in installer. (stranger)
* Improved social bookmarks block. (stranger)
* Updated TCPDF to version 4.6.015. (stranger)
* Updated TinyMCE to Version 3.2.4.1. (stranger)
* Updated FCKEditor to Version 2.6.4. (stranger)
* Updated GESHI to Version 1.0.8.4. (stranger)