@@ -89,6 +89,7 @@ Revision:
 * #301: removed creation of /uploads/profile/mp3 in imProfile | ticket from addons (Phoenyx)
 * #300: a visit to a profile of another user is now loged | ticket from addons (Phoenyx)
 * #303: links in the imProfile submenu are working properly now | ticket from addons (Phoenyx)
+* #285: added a redirect header message for users who are not logged in | ticket from addons (wtravel)
 * #304: you are now redirected to your profile page in case a user isn't found | ticket from addons (Phoenyx)
 * #260: fixed redirect loop for non-admin users in imProfile | ticket from addons (Phoenyx)
 * #722: description for image upload content area is now fully readable (IPF) (Phoenyx)
